# color-model

./: .gitignore  pyproject.toml  requirements.txt
core/: converter.py
data/: color_words.txt
phase1_static/: color_words.csv  color_words.json  data_loader.py  spm_train.py  train.py  viz_pca.py
