[project]
name = "color-model"
version = "0.1.0"
description = "颜色语义模型-阶段一"
requires-python = ">=3.10"
dependencies = [
    "torch==2.8.0",
    "numpy==2.2.6",
    "matplotlib==3.10.6",
    "scikit-learn==1.7.2",
    "colormath==3.0.0",
    "sentencepiece==0.2.1",
    "pandas==2.3.3",
    "pandas-stubs==2.3.2.250926",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
